--- a/styles.css
+++ b/styles.css
@@ -7,38 +7,51 @@ z-index: 10000;
 top: 0;
 left: 0;
 height: 100%;
-width: 0px;
+width: 30em;
 background-color: #111;
 overflow: hidden;
-transition: 0.5s;
-
+transition:all 0.5s;
+transform: translateX(-100%);
 }
 
-#markerWrapper
-{
-    min-width: 250px;
-}
+
 #markerDescription
 {
     color: aliceblue;
     display: block;
-    
-    width: 30em;
-
+    width: 80%;
+    margin: 2em auto;
 }
 
+@keyframes reopen {
+    0%{
+        opacity:0;
+    }
+    /* 50%{
+        opacity: 0;
+    } */
+    100%{
+        opacity:1;
+    }
+}
+
+.reopen {
+    animation-name: reopen;
+    animation-duration:1s;
+    animation-timing-function: ease-in;
+    
+}
 
 #markerImage
 {
 
-   width: 250px; 
+   width: 100%; 
 }
 
 
 #closeIcon
 {
 display: block;
-
 width: 1em;
 align-self: flex-end;
 margin-inline-end: 1em;
