--- a/styles.css
+++ b/styles.css
@@ -1,58 +1,194 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
-
-#sideCard
-{
-position: fixed;
-z-index: 10000;
-top: 0;
-left: 0;
-height: 100%;
-width: 30em;
-background-color: #111;
-overflow: hidden;
-transition:all 0.5s;
-transform: translateX(-100%);
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
+ #mapid {
+  width: 100%;
+  height: 100vh;
+}
 
-#markerDescription
-{
-    color: aliceblue;
+#sideCard {
+  position: fixed;
+  z-index: 10000;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 30em;
+  background-color: rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+  transition: all 0.5s;
+ transform: translateX(100%);
+}
+
+#markerHeader {
+    color: white;
     display: block;
     width: 80%;
-    margin: 2em auto;
+    margin-top: 1em;
+    margin-bottom: 0em;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 2em;
+}
+
+#markerDescription {
+  color: white;
+  display: block;
+  width: 80%;
+  margin: 2em auto;
 }
 
 @keyframes opacity {
-    0%{
-        opacity:0;
-    }
-    /* 50%{
+  0% {
+    opacity: 0;
+  }
+  /* 50%{
         opacity: 0;
     } */
-    100%{
-        opacity:1;
-    }
+  100% {
+    opacity: 1;
+  }
 }
 
 .opacity {
-    animation-name: opacity;
-    animation-duration:1s;
-    animation-timing-function: ease-in;
-    
+  animation-name: opacity;
+  animation-duration: 1s;
+  animation-timing-function: ease-in;
 }
 
-#markerImage
-{
-
-   width: 100%; 
+#markerImage {
+  width: 100%;
 }
 
-
-#closeIcon
-{
-display: block;
-width: 1em;
-align-self: flex-end;
-margin-inline-end: 1em;
+#closeIcon {
+  display: block;
+  width: 1em;
+  align-self: flex-end;
+  margin-inline-end: 1em;
 }
