--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,8 @@ section {
 }
 body {
   line-height: 1;
+  font-family: "Fira-Sans", sans-serif;
+  line-height: 1.5em;
 }
 ol,
 ul {
@@ -127,8 +129,27 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+#projectInfoWrapper {
+  position: fixed;
+  z-index: 10001;
+  bottom: 2em;
+  left: 4em;
+}
 
- #mapid {
+#header {
+  display: inline-block;
+  position: fixed;
+  z-index: 10001;
+  top: 0.7em;
+  left: 2em;
+  font-family: Montserrat;
+  color:rgb(36, 76, 129);
+  /* text-shadow:  0em 0.025em 2px rgba(0,0,0, .3); */
+  font-weight: 900;
+  font-size: 2em;
+}
+
+#mapid {
   width: 100%;
   height: 100vh;
 }
@@ -140,21 +161,21 @@ table {
   right: 0;
   height: 100%;
   width: 30em;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(3, 18, 203, 0.8);
   overflow: hidden;
   transition: all 0.5s;
- transform: translateX(100%);
+  transform: translateX(100%);
 }
 
 #markerHeader {
-    color: white;
-    display: block;
-    width: 80%;
-    margin-top: 1em;
-    margin-bottom: 0em;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 2em;
+  color: white;
+  display: block;
+  width: 80%;
+  margin-top: 1em;
+  margin-bottom: 0em;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 2em;
 }
 
 #markerDescription {
