--- a/styles.css
+++ b/styles.css
@@ -137,18 +137,47 @@ table {
 }
 
 #header {
-  display: inline-block;
+  /* background-color: white; */
+  padding: 0.5em;
+  border-radius: 0.5em;
   position: fixed;
   z-index: 10001;
-  top: 0.7em;
-  left: 2em;
+  top: 0.3em;
+  left: 3em;
+}
+
+#headerContentWrapper {
+  height: 4em;
+  display: inline-block;
+}
+#header a{
+text-decoration: none;
+color: black;
+margin-left: 0.5em;
+font-size: 1.5em;
+vertical-align: baseline;
+}
+
+#header a:hover {
+    text-decoration: underline;
+}
+
+#headerContentWrapper img {
+  height: 80%;
+  display: inline-block;
+  vertical-align: bottom;
+}
+#headerContentWrapper h2 {
+  top: 100%;
+  display: inline-block;
   font-family: Montserrat;
-  color:rgb(36, 76, 129);
+  color: black;
+  /* color: rgb(36, 76, 129); */
   /* text-shadow:  0em 0.025em 2px rgba(0,0,0, .3); */
   font-weight: 900;
   font-size: 2em;
+  vertical-align: baseline;
 }
-
 #mapid {
   width: 100%;
   height: 100vh;
