--- a/styles.css
+++ b/styles.css
@@ -143,23 +143,33 @@ table {
   position: fixed;
   z-index: 10001;
   top: 0.3em;
-  left: 3em;
+  left: 1.3em;
 }
 
 #headerContentWrapper {
   height: 4em;
   display: inline-block;
 }
-#header a{
-text-decoration: none;
-color: black;
-margin-left: 0.5em;
-font-size: 1.5em;
-vertical-align: baseline;
+#header a {
+  text-decoration: none;
+  color: black;
+  margin-left: 0.5em;
+  font-size: 1.5em;
+  vertical-align: baseline;
 }
 
 #header a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
+}
+
+.headerHidden {
+  display: none;
+}
+#header:hover .headerHidden {
+  animation-name: opacity;
+  animation-duration: 1s;
+  animation-timing-function: ease-in;
+  display: block;
 }
 
 #headerContentWrapper img {
@@ -236,7 +246,28 @@ vertical-align: baseline;
   width: 100%;
 }
 
-
+#markerButtonArrowLeft::before {
+  position: relative;
+  content: "";
+  display: inline-block;
+  width: 0.4em;
+  height: 0.4em;
+  border-right: 0.2em solid black;
+  border-top: 0.2em solid black;
+  transform: rotate(225deg);
+  margin-right: 0.5em;
+}
+#markerButtonArrowRight::after {
+  position: relative;
+  content: "";
+  display: inline-block;
+  width: 0.4em;
+  height: 0.4em;
+  border-right: 0.2em solid black;
+  border-top: 0.2em solid black;
+  transform: rotate(45deg);
+  margin-right: 0.5em;
+}
 
 #closeIcon {
   display: block;
