--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,7 @@ table {
   height: 4em;
   display: inline-block;
 }
-#header a {
+/* #header a {
   text-decoration: none;
   color: black;
   margin-left: 0.5em;
@@ -160,11 +160,12 @@ table {
 
 #header a:hover {
   text-decoration: underline;
-}
+} */
 
 .headerHidden {
   display: none;
 }
+
 #header:hover .headerHidden {
   animation-name: opacity;
   animation-duration: 1s;
@@ -180,34 +181,46 @@ table {
 #headerContentWrapper h2 {
   top: 100%;
   display: inline-block;
-  font-family: Montserrat;
+  font-family: "Fira-Sans", sans-serif;
   color: black;
   /* color: rgb(36, 76, 129); */
   /* text-shadow:  0em 0.025em 2px rgba(0,0,0, .3); */
-  font-weight: 900;
+  font-weight: bolder;
   font-size: 2em;
   vertical-align: baseline;
 }
+
 #mapid {
   width: 100%;
   height: 100vh;
 }
 
 #sideCard {
+  box-sizing: inline-box;
   position: fixed;
   z-index: 10000;
   top: 0;
-  right: 0;
+  float: right;
   height: 100%;
   width: 30em;
-  background-color: rgba(3, 18, 203, 0.8);
-  overflow: hidden;
+  background-color: white;
+  /* box-shadow: -20px 0px 20px hsla(0, 0% 0%, 0.2); */
+  overflow-x: hidden;
+  overflow-y: auto;
   transition: all 0.5s;
-  transform: translateX(100%);
+  transform: translateX(500%);
+}
+.sideCardOld {
+  background-color: rgb(241, 241, 135);
+  border: solid 2px;
+  border-top-right-radius: 5px 125px;
+  border-bottom-right-radius: 5px 125px;
+  /* border-radius: 255px 15pxborder-top-left-radius: 255px 15px; 225px 15px/15px 225px 15px 255px; */
+  /* box-shadow: -20px 0px 20px hsla(0, 0%, 0%, 0.2); */
 }
 
 #markerHeader {
-  color: white;
+  color: rgb(65, 64, 62);
   display: block;
   width: 80%;
   margin-top: 1em;
@@ -218,7 +231,7 @@ table {
 }
 
 #markerDescription {
-  color: white;
+  color: rgb(65, 64, 62);
   display: block;
   width: 80%;
   margin: 2em auto;
@@ -229,8 +242,8 @@ table {
     opacity: 0;
   }
   /* 50%{
-        opacity: 0;
-    } */
+    opacity: 0;
+  } */
   100% {
     opacity: 1;
   }
@@ -243,30 +256,46 @@ table {
 }
 
 #markerImage {
+  display: block;
   width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  /* border-bottom: 5px solid; */
+  /* border-radius: 255px 15px 225px 15px/15px 225px 15px 255px; */
+  /* border-top-left-radius: 10px 255px; */
+  /* border-bottom-right-radius: 225px 15px; */
+  /* border-bottom-left-radius: 10px 255px; */
+  /* box-shadow: 0px 10px 10px hsla(0, 0%, 0%, 0.2);; */
+}
+.markerImageOld {
+  border-bottom: 5px solid;
+  /* border-radius: 255px 15px 225px 15px/15px 225px 15px 255px; */
+  /* border-top-left-radius: 10px 255px; */
+  /* border-bottom-left-radius: 225px 15px; */
+  /* border-bottom-left-radius: 10px 255px; */
+  box-shadow: 0px 10px 10px hsla(0, 0%, 0%, 0.2);
 }
 
-#markerButtonArrowLeft::before {
-  position: relative;
-  content: "";
-  display: inline-block;
-  width: 0.4em;
-  height: 0.4em;
-  border-right: 0.2em solid black;
-  border-top: 0.2em solid black;
-  transform: rotate(225deg);
-  margin-right: 0.5em;
+#markerButtonWrapper {
+  display: flex;
+  width: 80%;
+  margin: 2em auto;
+  align-items: stretch;
+  justify-content: flex-start;
 }
-#markerButtonArrowRight::after {
-  position: relative;
-  content: "";
-  display: inline-block;
-  width: 0.4em;
-  height: 0.4em;
-  border-right: 0.2em solid black;
-  border-top: 0.2em solid black;
-  transform: rotate(45deg);
-  margin-right: 0.5em;
+
+
+
+#markerButton {
+  font-family: "Amatic SC", cursive;
+  font-weight: 700;
+  font-size: 1.4em;
+  opacity: 0.2;
+  transition: all 0.3s ease-out;
+}
+
+#markerButton:hover {
+  opacity: 1;
 }
 
 #closeIcon {
