--- a/styles.css
+++ b/styles.css
@@ -150,28 +150,6 @@ table {
   height: 4em;
   display: inline-block;
 }
-/* #header a {
-  text-decoration: none;
-  color: black;
-  margin-left: 0.5em;
-  font-size: 1.5em;
-  vertical-align: baseline;
-}
-
-#header a:hover {
-  text-decoration: underline;
-} */
-
-.headerHidden {
-  display: none;
-}
-
-#header:hover .headerHidden {
-  animation-name: opacity;
-  animation-duration: 1s;
-  animation-timing-function: ease-in;
-  display: block;
-}
 
 #headerContentWrapper img {
   height: 80%;
@@ -183,32 +161,54 @@ table {
   display: inline-block;
   font-family: "Fira-Sans", sans-serif;
   color: black;
-  /* color: rgb(36, 76, 129); */
+  /* color: rgb(vh36, 76, 129); */
   /* text-shadow:  0em 0.025em 2px rgba(0,0,0, .3); */
   font-weight: bolder;
   font-size: 2em;
   vertical-align: baseline;
 }
 
-#mapid {
-  width: 100%;
+
+/* main area */
+
+
+#flexContainer {
+  display: flex;
   height: 100vh;
+  width: 100%;
 }
 
-#sideCard {
-  box-sizing: inline-box;
-  position: fixed;
-  z-index: 10000;
-  top: 0;
-  float: right;
+#mapid {
+  flex: 4;
+  order: 1;
   height: 100%;
-  width: 30em;
-  background-color: white;
+  transition: all 0.5s;
+}
+
+.sideCard {
+  box-sizing: inline-box;
+  /* float: right; */
+  height: 100%;
+  background-color: blue;
   /* box-shadow: -20px 0px 20px hsla(0, 0% 0%, 0.2); */
   overflow-x: hidden;
+  flex: 0;
   overflow-y: auto;
   transition: all 0.5s;
-  transform: translateX(500%);
+}
+
+.sideCard-left {
+  order:0;
+  flex:0;
+}
+
+.sideCard-right {
+  order:2;
+  flex:0;
+}
+
+.sideCard::-webkit-scrollbar {
+  display: none;
 }
 .sideCardOld {
   background-color: rgb(241, 241, 135);
@@ -219,7 +219,7 @@ table {
   /* box-shadow: -20px 0px 20px hsla(0, 0%, 0%, 0.2); */
 }
 
-#markerHeader {
+.markerHeader {
   color: rgb(65, 64, 62);
   display: block;
   width: 80%;
@@ -230,7 +230,7 @@ table {
   font-size: 2em;
 }
 
-#markerDescription {
+.markerDescription {
   color: rgb(65, 64, 62);
   display: block;
   width: 80%;
@@ -249,13 +249,14 @@ table {
   }
 }
 
-.opacity {
+.animation-opacity {
   animation-name: opacity;
-  animation-duration: 1s;
-  animation-timing-function: ease-in;
+  animation-duration: 0.7s;
+  animation-timing-function: ease-in-out;
 }
 
-#markerImage {
+.markerImage {
+  
   display: block;
   width: 100%;
   margin-left: auto;
@@ -276,7 +277,7 @@ table {
   box-shadow: 0px 10px 10px hsla(0, 0%, 0%, 0.2);
 }
 
-#markerButtonWrapper {
+.markerButtonWrapper {
   display: flex;
   width: 80%;
   margin: 2em auto;
@@ -286,7 +287,7 @@ table {
 
 
 
-#markerButton {
+.markerButton {
   font-family: "Amatic SC", cursive;
   font-weight: 700;
   font-size: 1.4em;
@@ -294,11 +295,11 @@ table {
   transition: all 0.3s ease-out;
 }
 
-#markerButton:hover {
+.markerButton:hover {
   opacity: 1;
 }
 
-#closeIcon {
+.closeIcon {
   display: block;
   width: 1em;
   align-self: flex-end;
