--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ table {
 #headerContentWrapper h2 {
   top: 100%;
   display: inline-block;
-  font-family: "Fira-Sans", sans-serif;
+  font-family: "Amatic SC", cursive;
   color: black;
   /* color: rgb(36, 76, 129); */
   /* text-shadow:  0em 0.025em 2px rgba(0,0,0, .3); */
@@ -161,9 +161,7 @@ table {
   font-weight: bolder;
   vertical-align: baseline;
 }
-#headerContentWrapper h2:hover {
-  font-family: "Amatic SC", cursive;
-}
+
 
 #mapid {
   width: 100%;
@@ -206,7 +204,14 @@ table {
   text-align: center;
   width: 100%;
   background-color: white;
+  border-bottom: 2px solid rgb(65, 64, 62);
+  transition: all 0.3s ease-out;
 }
+
+.markerCloseWrapperOld{
+border-bottom-right-radius: 225px 15px;
+}
+
 #markerClose {
   vertical-align: middle;
   font-family: "Amatic SC", cursive;
@@ -228,15 +233,15 @@ table {
   /* margin-top: 0.3em; */
   margin-left: auto;
   margin-right: auto;
-  box-shadow: 0px 10px 10px hsla(0, 0%, 0%, 0.2);
+  border-bottom: 2px solid rgb(65, 64, 62);
+  /* box-shadow: 0px 10px 10px hsla(0, 0%, 0%, 0.2); */
 }
 
 .markerImageOld {
   box-sizing: border-box;
   transition: all 0.3s ease-out;
-  border-top: 2px solid rgb(65, 64, 62);
+  /* border-top: 2px solid rgb(65, 64, 62); */
   border-bottom: 2px solid rgb(65, 64, 62);
-  border-top-right-radius: 225px 15px;
   border-bottom-left-radius: 225px 15px;
 }
 
@@ -257,7 +262,7 @@ table {
 
 #markerDescriptionWrapper {
   margin: 2em auto;
-  width: 80%;
+  width: 70%;
 }
 
 #markerDescription {
