--- a/index.css
+++ b/index.css
@@ -28,7 +28,6 @@ cite,
 code,
 del,
 dfn,
-em,
 img,
 ins,
 kbd,
@@ -37,12 +36,11 @@ s,
 samp,
 small,
 strike,
-strong,
+
 sub,
 sup,
 tt,
 var,
-b,
 u,
 i,
 center,
@@ -114,17 +112,8 @@ ol,
 ul {
   list-style: none;
 }
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
+
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -140,26 +129,33 @@ table {
   left: 1.3em;
 }
 
-#headerContentWrapper {
-  height: 4em;
-  display: inline-block;
+#header a {
+  text-decoration: none;
 }
 
-#headerContentWrapper img {
-  height: 80%;
+
+
+#header img {
+  height: 4em;
   display: inline-block;
   vertical-align: bottom;
 }
-#headerContentWrapper h2 {
+#header h2 {
   top: 100%;
   display: inline-block;
   font-family: "Amatic SC", cursive;
+  
   color: black;
   /* color: rgb(36, 76, 129); */
   /* text-shadow:  0em 0.025em 2px rgba(0,0,0, .3); */
   font-size: 2em;
   font-weight: bolder;
   vertical-align: baseline;
+  transition: all 0.5s ease-out;
+}
+
+#header h2:hover {
+  letter-spacing: 0.6em;
 }
 
 
@@ -198,39 +194,51 @@ table {
 }
 
 #markerCloseWrapper {
-  position: sticky;
-  top: 0em;
-  line-height: 5em;
+  position: fixed;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  /* line-height: 5em; */
   text-align: center;
+  top: 0em;
+  height: 5em;
   width: 100%;
   background-color: white;
   border-bottom: 2px solid rgb(65, 64, 62);
   transition: all 0.3s ease-out;
+  z-index: 100000;
 }
 
 .markerCloseWrapperOld{
-border-bottom-right-radius: 225px 15px;
+  border-bottom-right-radius: 225px 15px;
 }
 
 #markerClose {
-  vertical-align: middle;
   font-family: "Amatic SC", cursive;
   font-size: 3em;
   color: black;
 }
 
 #markerClose:hover {
-  text-shadow: 3px 3px 5px hsla(0, 0%, 0%, 0.4);
+  
+  text-shadow: 3px 3px 5px hsla(0, 0%, 0%, 0.6);
+  transition: all 0.4s ease-out;
 }
 #markerClose:active {
+  transition: all 0.3s ease-out;
   text-shadow: 0px 0px 0px hsla(0, 0%, 0%, 1);
 }
 
+#markerImageWrapper {
+height: 30em;
+}
 #markerImage {
-  display: block;
+  top: 0em;
+  height: 100%;
   width: 100%;
-  height: 10 em;
   /* margin-top: 0.3em; */
+  object-fit: cover;
+  margin-top: 2em;
   margin-left: auto;
   margin-right: auto;
   border-bottom: 2px solid rgb(65, 64, 62);
