--- a/about.css
+++ b/about.css
@@ -136,10 +136,9 @@ table {
 }
 
 .aboutColumnPart{
-    width: 50%;
+    width: 30%;
     height: 100vh;
-    margin-left: auto;
-    margin-right: auto;
+margin-left: 20em;
     padding: 0em 0.1em;
     display: flex;
     flex-direction: column;
@@ -156,7 +155,7 @@ table {
     border-left: solid 4px rgb(65, 64, 62);
     border-right: solid 4px rgb(65, 64, 62);
     height: 100%;
-    text-align: center;
+    text-align: left;
     
 }
 
@@ -169,13 +168,15 @@ table {
     font-family: "Amatic SC", cursive;
   font-size: 8em;
   font-weight: 400;
-  letter-spacing: 0.3em;
+  
   margin-top: 1em;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
   color: #000;
 }
 .aboutColumnContainer h1:hover{
-    text-decoration:underline;
+  text-shadow: 3px 3px 5px hsla(0, 0%, 0%, 0.3);
+  transition: all 0.4s ease-out;
+  
 }
 
 .aboutColumnContainer h2{
@@ -191,9 +192,19 @@ table {
     font-family: "Roboto", sans-serif;
 
 font-weight: normal;
-font-size: 2em;
+font-size: 1em;
 line-height: 1.5em;
-text-align: center;
+text-align: left;
 margin-top: 1em;
-margin-bottom: 4em;
+margin-bottom: 2em;
+}
+
+.aboutColumnContainer span {
+  display: block;
+  font-size: 1.25em;
+  line-height: 3em;
+  margin-bottom: 1.5em;
+}
+.aboutColumnContainer b {
+  font-weight: 900;
 }
