--- a/about.css
+++ b/about.css
@@ -163,31 +163,43 @@ margin-left: 20em;
     text-decoration:none;
 }
 
-
-.aboutColumnContainer h1{
-    font-family: "Amatic SC", cursive;
-  font-size: 8em;
-  font-weight: 400;
-  
-  margin-top: 1em;
-  margin-bottom: 2em;
-  color: #000;
-}
 .aboutColumnContainer h1:hover{
   text-shadow: 3px 3px 5px hsla(0, 0%, 0%, 0.3);
   transition: all 0.4s ease-out;
   
 }
 
+
 .aboutColumnContainer h2{
     font-family: "Roboto", sans-serif;
-  font-size: 3em;
+  font-size: 4em;
   font-weight: 800;
   text-align: center;
+  
   margin-bottom: 4em;
-
 }
 
+@media screen and (max-width: 600px) {
+  .aboutColumnContainer h1{
+    font-family: "Amatic SC", cursive;
+    font-weight: 400;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    color: #000;
+    font-size: 2em;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .aboutColumnContainer h1{
+    font-family: "Amatic SC", cursive;
+    font-weight: 400;
+    margin-top: 4em;
+    margin-bottom: 2em;
+    color: #000;
+    font-size: 4em;
+  }
+}
 .aboutColumnContainer p {
     font-family: "Roboto", sans-serif;
 
