--- a/index.css
+++ b/index.css
@@ -36,7 +36,6 @@ s,
 samp,
 small,
 strike,
-
 sub,
 sup,
 tt,
@@ -113,10 +112,28 @@ ul {
   list-style: none;
 }
 
-
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+#clouds {
+  display: block;
+  position: absolute;
+  top: 0em;
+  z-index: 99999;
+  width: 100%;
+  height: 100vh;
+  background-image:
+    url(img/Clouds/1.png),
+    url(img/Clouds/2.png),
+    url(img/Clouds/3.png),
+    url(img/Clouds/4.png),
+    url(img/Clouds/6.png),
+    url(img/Clouds/5.png);
+    background-repeat: repeat-x;
+    pointer-events: none;
+  
 }
 
 #header {
@@ -124,7 +141,7 @@ table {
   padding: 0.5em;
   border-radius: 0.5em;
   position: fixed;
-  z-index: 10001;
+  z-index: 100001;
   top: 0.3em;
   left: 1.3em;
 }
@@ -132,8 +149,6 @@ table {
 #header a {
   text-decoration: none;
 }
-
-
 
 #header img {
   height: 4em;
@@ -144,7 +159,7 @@ table {
   top: 100%;
   display: inline-block;
   font-family: "Amatic SC", cursive;
-  
+
   color: black;
   /* color: rgb(36, 76, 129); */
   /* text-shadow:  0em 0.025em 2px rgba(0,0,0, .3); */
@@ -158,7 +173,6 @@ table {
   letter-spacing: 0.6em;
 }
 
-
 #mapid {
   width: 100%;
   height: 100vh;
@@ -167,14 +181,14 @@ table {
 #sideCard {
   box-sizing: border-box;
   position: fixed;
-  z-index: 10000;
+  z-index: 100001;
   top: 0;
   right: 0px;
   height: 100%;
   width: 30em;
   background-color: white;
   box-shadow: -10px 0px 10px hsla(0, 0%, 0%, 0.1);
- overflow-y: scroll;
+  overflow-y: scroll;
   transition: all 0.5s ease-out;
   transform: translateX(100%);
 }
@@ -195,7 +209,7 @@ table {
 
 #markerCloseWrapper {
   position: fixed;
-  display:flex;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   /* line-height: 5em; */
@@ -209,7 +223,7 @@ table {
   z-index: 100000;
 }
 
-.markerCloseWrapperOld{
+.markerCloseWrapperOld {
   border-bottom-right-radius: 225px 15px;
 }
 
@@ -220,7 +234,6 @@ table {
 }
 
 #markerClose:hover {
-  
   text-shadow: 3px 3px 5px hsla(0, 0%, 0%, 0.6);
   transition: all 0.4s ease-out;
 }
@@ -230,7 +243,7 @@ table {
 }
 
 #markerImageWrapper {
-height: 30em;
+  height: 30em;
 }
 #markerImage {
   top: 0em;
@@ -253,7 +266,6 @@ height: 30em;
   border-bottom-left-radius: 225px 15px;
 }
 
-
 #markerHeader {
   color: rgb(65, 64, 62);
   display: block;
@@ -265,8 +277,6 @@ height: 30em;
   font-size: 2em;
   text-align: center;
 }
-
-
 
 #markerDescriptionWrapper {
   margin: 2em auto;
@@ -317,4 +327,3 @@ height: 30em;
 #markerButton:active {
   text-shadow: 0px 0px 0px hsla(0, 0%, 0%, 1);
 }
-
